@@ -407,6 +407,9 @@
                                           classpathref="maven.plugin.classpath" classname="com.pinterest.ktlint.Main">
                                         <arg value="-F"/>
                                         <arg value="src/**/*.kt"/>
+                                        <!-- Trenger dette for å kjøre ktlint med java 17 -->
+                                        <jvmarg value="--add-opens"/>
+                                        <jvmarg value="java.base/java.lang=ALL-UNNAMED"/>
                                     </java>
                                 </target>
                             </configuration>
